...
            Color.theme.darkBackground
                .ignoresSafeArea()

            ScrollView {
                VStack(alignment: .leading, spacing: 24) {
                    SuggestionCardView {
                        SectionHeaderView(text: "SETTINGS", color: Color.theme.offWhite.opacity(0.65))

                        Text("Manage your suggestion library.")
                            .font(.subheadline)
                            .foregroundStyle(Color.gray)

                        Button("Questions Settings") {
...
